--- a/registration form/index.html
+++ b/registration form/index.html
@@ -6,8 +6,73 @@
     <title>Email subscription Form</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.jpg" type="image/x-icon">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Prevent scrollbars due to video size */
+            background-image: url('path/to/your/background-image.jpg');
+            background-size: cover;
+            background-position: center;
+            position: relative;
+        }
+
+        video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1; /* Place the video behind other content */
+        }
+        
+        .container {
+            position: relative;
+            z-index: 1; /* Place the content in front of the video */
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* Add some opacity to the container */
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        .email {
+            display: flex;
+            margin-top: 20px;
+        }
+
+        input[type="email"] {
+            flex: 1;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .icon {
+            padding: 10px;
+            background-color: #4caf50;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
+    <video src="videos/file_example_MP4_480_1_5MG.mp4" autoplay muted loop></video>
     <div class="container">
         <h1>Subscribe to get cookies!!</h1>
         <div class="email">
@@ -16,6 +81,5 @@
             <button type="submit">Subscribe</button>
         </div>
     </div>
-    
 </body>
 </html>
